one arg is enough