@@ -64,9 +64,6 @@
             <properties>
                 <jdkArgs>
                     --illegal-access=permit
-                    --add-exports java.base/jdk.internal.ref=ALL-UNNAMED
-                    --add-exports java.base/jdk.internal.misc=ALL-UNNAMED
-                    --add-exports java.base/sun.nio.ch=ALL-UNNAMED
                 </jdkArgs>
             </properties>
         </profile>
